# flaschen-taschen

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  demo-grid.scad  docker-compose.yml  flaschen-taschen.cc  flaschen-taschen.h  ft-gpio.cc  ft-gpio.h  ft-server-main.cc  lpd6803-flaschen-taschen.cc  opc-server.cc  opc-server.h  pixel-push-discovery.h  pixel-push-server.cc  send-image.cc  servers.h  shell.nix  thread.cc  thread.h  udp-server.cc  ws28xx-flaschen-taschen.cc
api/: README.md
api/python/: README.md  flaschen.py  flaschenQ7client.py  flaschenimage.py  flaschenmulticlient.py  pyproject.toml  test_flaschen.py
apps/: Makefile
client/: Makefile  README.md  all_fade.py  bdf-font.cc  bdf-font.h  bookcase.py  bookcase_squares.py  burn-in.cc  clear.py  debian_make_all.sh  flaschen.py  game-client.cc  game-engine-private.h  game-engine.cc  game-engine.h  mandelbrot.cc  multiflaschen.py  noisesquarerainbow.py  pong-client.cc  pong-game.cc  pong-game.h  rainbowbookcase.py  rainbowsweep.py  send-image.cc  send-text  send-text.cc  send-video.cc  simple-animation.cc  simple-example.cc  simple-example.py  timer.h  udp-flaschen-taschen.cc  udp-flaschen-taschen.h  utf8-internal.h
common/: flaschen-taschen.h
doc/: protocols.md  starting-on-boot-initd.md  wiring.md
examples-api-use/: Makefile  README.md  flaschenQ7client_example.py  image_example.py  multipleclient_example.py  python-example.py  simple-animation.cc  simple-example.py
hardware/: Makefile  README.md  kicad-fab.py  pi-adapter-cache.lib  pi-adapter.kicad_pcb  pi-adapter.sch  pi-mounting-rig.ps  (+5 more)
(+70 files in other folders)
